﻿feature: added ReadJsonObject, ReadJsonArray, ReadJsonValue methods for CommandOutput