@@ -1,0 +1,13 @@
+namespace GameDevWare.Charon.Unity.Utils;
+
+public enum ListFilterOperation
+{
+	GreaterThan,
+	GreaterThanOrEqual,
+	LessThan,
+	LessThanOrEqual,
+	Equal,
+	NotEqual,
+	Like,
+	In
+};
