@@ -1,0 +1,7 @@
+﻿namespace GameDevWare.Charon.Unity.Utils;
+
+public enum ListSorterDirection
+{
+	Ascending,
+	Descending,
+};
